--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,8 +14,8 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
-        run: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: Test
-        uses: docker-compose run --rm app sh -c "python manage.py test"
+        run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
