--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -11,11 +11,12 @@ services:
       - DB_HOST=db
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
-      - DB_PASS=${FB_PASS}
+      - DB_PASS=${DB_PASS}
       - SECRET_KEY=${DJANGO_SECRET_KEY}
-      - ALLOWED_HOSTS=${DJANGO_ALLOWED_HOST}
+      - ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
     depends_on:
       - db
+
   db:
     image: postgres:13-alpine
     restart: always
@@ -24,7 +25,7 @@ services:
     environment:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASS=${DB_PASS}
+      - POSTGRES_PASSWORD=${DB_PASS}
 
   proxy:
     build:
