--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,28 +12,28 @@ services:
       - ./app:/app
       - dev-static-data:/vol/web
     command: >
-      sh -c "python manage.py wait_for_db && 
-              python manage.py migrate &&
-              python manage.py runserver 0.0.0.0:8000"
-
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
-      - DB_NAME=devdb
-      - DB_USER=postgres
-      - DB_PASS=Password1234
+      - DB_NAME=devdb1
+      - DB_USER=devuser
+      - DB_PASS=changeme
+      - DEBUG=1
     depends_on:
-        - db
-
+      - db
 
   db:
     image: postgres:13-alpine
     volumes:
       - dev-db-data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=devdb
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=Password1234
+      - POSTGRES_DB=devdb1
+      - POSTGRES_USER=devuser
+      - POSTGRES_PASSWORD=changeme
 
 volumes:
   dev-db-data:
   dev-static-data:
+
